Fixed weird layout issue on article pages, introduction of article-specific features.

--- a/mirror.css
+++ b/mirror.css
@@ -416,3 +416,7 @@ article.type-page {
 article.type-post {
     border: none !important;
 }
+
+.input-container {
+    margin-bottom: 15px;
+}
